<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="category" type="com.abhiandroid.quizgameapp.activity.SettingActivity"/>
    </data>
    <LinearLayout
        style="@style/AppTheme.MyTheme.Cordinates_Length.MM"
        android:gravity="center"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:id="@+id/header_panel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:src="@drawable/back_icon2"
                />
            <com.abhiandroid.quizgameapp.views.AllerRegularTextView
                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                android:text="@string/setting"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                />
        </RelativeLayout>
        <RelativeLayout
            style="@style/AppTheme.MyTheme.Cordinates_Length.MM"
            android:padding="@dimen/_10sdp"
            android:gravity="center_horizontal"
            >
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sc_notification"
                style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/notification"
                app:showText="false"/>
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/sc_vibration"
                style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/_10sdp"
                android:layout_below="@+id/sc_notification"
                android:text="@string/vibration"
                app:showText="false"/>

            <android.support.v7.widget.CardView
                style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
                android:background="@android:color/white"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_below="@+id/sc_vibration"
                app:cardElevation="@dimen/_2sdp"
                app:cardPreventCornerOverlap="false">
                <RelativeLayout
                    style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
                    android:padding="@dimen/_6sdp">

                    <com.abhiandroid.quizgameapp.views.AllerRegularTextView
                        android:id="@+id/secondLine"
                        android:gravity="center"
                        style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                        android:text="@string/setting_message"
                        android:textColor="@color/category_txt_color"
                        />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <com.abhiandroid.quizgameapp.views.MyAdView
                android:id="@+id/ad_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">
            </com.abhiandroid.quizgameapp.views.MyAdView>

        </RelativeLayout>

    </LinearLayout>
</layout>

    <!--Developed by AbhiAndroid.com-->