<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="category" type="com.abhiandroid.quizgameapp.activity.ShowScoreActivity"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/play_quiz_bg_color"
        tools:context=".activity.ShowScoreActivity">
        <com.abhiandroid.quizgameapp.views.MyAdView
            android:id="@+id/ad_view"
            style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
            android:layout_alignParentBottom="true">
        </com.abhiandroid.quizgameapp.views.MyAdView>
        <RelativeLayout
            android:id="@+id/header_panel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:onClick="goBack"
                android:src="@drawable/back_icon2"
                />
            <com.abhiandroid.quizgameapp.views.AllerRegularTextView
                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                android:text="@string/score"
                android:textSize="@dimen/_14sdp"
                android:textColor="@android:color/white"
                android:layout_centerInParent="true"
                />
            <ImageView
                android:id="@+id/share"
                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                android:padding="@dimen/_10sdp"
                android:textSize="@dimen/_14sdp"
                android:onClick="shareScore"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/share_white_icon"

                />
        </RelativeLayout>
        <ScrollView
           style="@style/AppTheme.MyTheme.Cordinates_Length.MM"
            android:layout_below="@+id/header_panel"
            android:layout_above="@+id/ad_view"
            android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"

        >
        <android.support.v7.widget.CardView
            android:id="@+id/score_panel"
            style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
            android:background="@android:color/white"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardPreventCornerOverlap="false">

                <LinearLayout
                    style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
                    android:padding="@dimen/_8sdp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <com.abhiandroid.quizgameapp.views.AllerRegularTextView
                        android:id="@+id/tv_great_play"
                        style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                        android:textColor="@color/dialog_bg_color"
                        android:textSize="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@color/play_quiz_bg_color"/>
                    <LinearLayout
                        style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">
                            <com.abhiandroid.quizgameapp.views.AllerBoldTextView
                                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                                android:textColor="@color/dialog_bg_color"
                                android:textSize="@dimen/_14sdp"
                                android:text="@string/your_score"
                                android:textAllCaps="true"/>
                            <com.abhiandroid.quizgameapp.views.AllerBoldTextView
                                android:id="@+id/tv_total_score"
                                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                                android:textColor="@color/txt_color_yellow"
                                android:textSize="@dimen/_35sdp"
                               />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">
                            <com.abhiandroid.quizgameapp.views.AllerBoldTextView
                                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                                android:textColor="@color/dialog_bg_color"
                                android:textSize="@dimen/_14sdp"
                                android:text="@string/correct"
                                android:textAllCaps="true"/>
                            <com.abhiandroid.quizgameapp.views.AllerBoldTextView
                                android:id="@+id/tv_correct_ans"
                                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                                android:textColor="@color/txt_color_green"
                                android:textSize="@dimen/_35sdp"
                               />

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:orientation="vertical">
                            <com.abhiandroid.quizgameapp.views.AllerBoldTextView
                                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                                android:textColor="@color/dialog_bg_color"
                                android:textSize="@dimen/_14sdp"
                                android:text="@string/wrong"
                                android:textAllCaps="true"/>
                            <com.abhiandroid.quizgameapp.views.AllerBoldTextView
                                android:id="@+id/tv_wrong_ans"
                                style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                                android:textColor="@color/txt_color_red"
                                android:textSize="@dimen/_35sdp"
                               />

                        </LinearLayout>

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_2sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@color/play_quiz_bg_color"/>
                    <LinearLayout
                      android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:gravity="center"
                        android:onClick="shareScore"
                        android:orientation="horizontal">


                    <com.abhiandroid.quizgameapp.views.AllerRegularTextView
                        style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                        android:textColor="@color/dialog_bg_color"
                        android:textSize="@dimen/_16sdp"
                        android:text="@string/share_your_score"/>
                        <ImageView

                            style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                            android:paddingTop="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingRight="@dimen/_10sdp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/share_green_icon"

                            />
                    </LinearLayout>
                </LinearLayout>



        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/see_ranking"
            style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
            android:text="@string/see_your_ranking"
            android:layout_centerVertical="true"
            android:layout_below="@+id/score_panel"
            android:background="@drawable/ripple_effect_transparent_btn_shape"
            android:drawableRight="@drawable/tint_image"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/colorPrimary"
            android:onClick="checkRanking"
            />
        <android.support.v7.widget.CardView
            android:id="@+id/score_chart"
            style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
            android:background="@android:color/white"
            android:layout_below="@+id/see_ranking"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="@dimen/_2sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
                android:padding="@dimen/_8sdp"
                android:gravity="center_horizontal"
                android:orientation="vertical">
                <com.abhiandroid.quizgameapp.views.AllerRegularTextView
                    style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                    android:textColor="@color/dialog_bg_color"
                    android:textSize="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/result_analysis"/>

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/piechart"
                    android:layout_width="@dimen/piechart_size"
                    android:layout_height="@dimen/piechart_size"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <LinearLayout

           style="@style/AppTheme.MyTheme.Cordinates_Length.MW"
            android:layout_below="@+id/score_chart"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">
            <com.abhiandroid.quizgameapp.views.AllerRegularTextView
                android:id="@+id/tv_play_again"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/play_again"
                android:textAllCaps="true"
                android:paddingTop="@dimen/_15sdp"
                android:paddingBottom="@dimen/_15sdp"
                android:onClick="playAgain"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                android:background="@drawable/ripple_effect_btn_shape"
                android:textColor="@android:color/white"/>
            <com.abhiandroid.quizgameapp.views.AllerRegularTextView
               style="@style/AppTheme.MyTheme.Cordinates_Length.WW"
                android:text="@string/or"
                android:textSize="@dimen/_14sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/category_txt_color"/>
        <com.abhiandroid.quizgameapp.views.AllerRegularTextView
            android:id="@+id/tv_categories"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_category"
            android:textAllCaps="true"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:onClick="goToCategories"
            android:textSize="@dimen/_14sdp"
            android:gravity="center"
            android:background="@drawable/ripple_effect_btn_shape"
            android:textColor="@android:color/white"/>
    </LinearLayout>

    </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>

    <!--Developed by AbhiAndroid.com-->